Use simpler and newer file writing API